--- a/test.html
+++ b/test.html
@@ -1,3 +1,8 @@
 <html>
-<p>this text is loaded from github</p>
+  <head>
+    <link rel="stylesheet" href="https://raw.githack.com/banana-galaxy/test/master/style.css">
+  </head>
+  <body>
+    <p>this text is loaded from github</p>
+  </body>
 </html>
