--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href="https://raw.githack.com/banana-galaxy/test/master/style.css">
   </head>
   <body>
-    <p>this text is loaded from github</p>
+    <p>this text <span class="underline">is</span> loaded from github</p>
   </body>
 </html>
