--- a/emi-filter-pwm-fan/short_desc.html
+++ b/emi-filter-pwm-fan/short_desc.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="https://raw.githack.com/banana-galaxy/test/master/style.css">
+  </head>
   <div>
     <b>Computer Fan Silencer</b>
     <br/>Supports 12V and 5V PWM Fans
