--- a/power-emi-filter-for-audio-12a/short_desc.html
+++ b/power-emi-filter-for-audio-12a/short_desc.html
@@ -7,9 +7,9 @@
       <b>High Current</b>&nbsp;Power line EMI filter / conditioner.
     </Row>
     <Tab>
-      <Bullet>Deep suppression of common-mode and differential noise</Bullet>
-      <Bullet>Advanced Ground Loop Breaking</Bullet>
-      <Bullet>Zero Noise Surge Protection</Bullet>
+      <div class="bullet">Deep suppression of common-mode and differential noise</div>
+      <div class="bullet">Advanced Ground Loop Breaking</div>
+      <div class="bullet">Zero Noise Surge Protection</div>
       <Bullet>Low impedance PCB, fuses, and terminals</Bullet>
       <Bullet>Top quality parts by WIMA, Triad, Schurter</Bullet>
     </Tab>
