--- a/power-emi-filter-for-audio-12a/short_desc.html
+++ b/power-emi-filter-for-audio-12a/short_desc.html
@@ -10,8 +10,8 @@
       <div class="bullet">Deep suppression of common-mode and differential noise</div>
       <div class="bullet">Advanced Ground Loop Breaking</div>
       <div class="bullet">Zero Noise Surge Protection</div>
-      <Bullet>Low impedance PCB, fuses, and terminals</Bullet>
-      <Bullet>Top quality parts by WIMA, Triad, Schurter</Bullet>
+      <div class="bullet">Low impedance PCB, fuses, and terminals</div>
+      <div class="bullet">Top quality parts by WIMA, Triad, Schurter</div>
     </Tab>
     Recommended load currents up to 12A.
     <br/>Maximum current – 16A.
