--- a/power-emi-filter-for-audio-12a/short_desc.html
+++ b/power-emi-filter-for-audio-12a/short_desc.html
@@ -6,13 +6,13 @@
     <Row>
       <b>High Current</b>&nbsp;Power line EMI filter / conditioner.
     </Row>
-    <Tab>
+    <div class="tab">
       <div class="bullet">Deep suppression of common-mode and differential noise</div>
       <div class="bullet">Advanced Ground Loop Breaking</div>
       <div class="bullet">Zero Noise Surge Protection</div>
       <div class="bullet">Low impedance PCB, fuses, and terminals</div>
       <div class="bullet">Top quality parts by WIMA, Triad, Schurter</div>
-    </Tab>
+    </div>
     Recommended load currents up to 12A.
     <br/>Maximum current – 16A.
   </div>
